<resources>
    <string name="app_name">ProjectApplication02</string>
    <string name="mainActivity_welcome">Welcome!</string>
    <string name="mainActivity_loginButton">Log in</string>
    <string name="mainActivity_signUp">Sign Up</string>
    <string name="loginPage_title">Log In</string>
    <string name="loginPage_editText_email">Email</string>
    <string name="loginPage_editText_password">Password</string>
    <string name="loginPage_button">Log In</string>
    <string name="signupPage_title">Sign Up</string>
    <string name="signupPage_editText_password">Password</string>
    <string name="signupPage_editText_email">Email</string>
    <string name="signupPage_editText_username">Username</string>
    <string name="signupPage_editText_password_c">Retype Password</string>
    <string name="signupPage_button_signup">Create an Account</string>
    <string name="signup_editText_birthday">Birthday(dd/mm/yyyy)</string>
    <string name="homePage_testText">This is gonna be the home screen after logged in!</string>
    <string name="title_activity_drawer__home_page">Drawer_HomePage</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homePage_menu_my_profile">My Profile</string>
    <string name="homePage_menu_my_favorite">My Favorites</string>
    <string name="homePage_menu_profile_setting">Profile Settings</string>
    <string name="homePage_menu_new_post">Write a New Post</string>
    <string name="homePage_menu_log_out">Log out</string>
    <string name="create_post_editText">Write something here...</string>
    <string name="create_post_take_picture">Take a Picture!</string>
    <string name="create_post_submit">POST</string>
    <string name="my_profile_menu_home">Home</string>
    <string name="setting_title">Setting</string>
    <string name="setting_name">Full Name</string>
    <string name="setting_email">Email</string>
    <string name="setting_hometown">Hometown</string>
    <string name="setting_bio">biography</string>
    <string name="setting_submit">SUBMIT</string>
    <string name="setting_birthday">Birthday</string>
</resources>
