<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/background"
    >
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="csc296.projectapplication02.SettingPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_title"
        android:id="@+id/setting_title"
        android:textColor="@color/text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_below="@id/setting_title"
        android:hint="@string/setting_name"
        android:layout_margin="10dp"
        android:id="@+id/setting_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_below="@id/setting_name"
        android:hint="@string/setting_hometown"
        android:layout_margin="10dp"
        android:id="@+id/setting_hometown"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_below="@id/setting_hometown"
        android:hint="@string/setting_birthday"
        android:layout_margin="10dp"
        android:id="@+id/setting_birthday"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_below="@id/setting_birthday"
        android:hint="@string/setting_bio"
        android:layout_margin="10dp"
        android:lines="10"
        android:gravity="top|start"
        android:maxLines="15"
        android:minLines="9"
        android:scrollbars="vertical"
        android:id="@+id/setting_bio"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_submit"
        android:layout_below="@id/setting_bio"
        android:id="@+id/setting_submit"/>


</RelativeLayout>
</ScrollView>