<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="csc296.projectapplication02.SignupPage"
    android:background="#3A3C46">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupPage_title"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#8a8a8e"
        android:id="@+id/signupPage_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signupPage_editText_email"
        android:inputType="textEmailAddress"
        android:id="@+id/signupPage_editText_email"
        android:layout_marginTop="31dp"
        android:textColor="#8a8a8e"
        android:textColorHint="#bcbcc2"
        android:padding="15dp"
        android:layout_below="@+id/signupPage_title"
        android:layout_alignStart="@+id/signupPage_editText_username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signupPage_editText_password"
        android:inputType="textPassword"
        android:id="@+id/signupPage_editText_password"
        android:textColor="#8a8a8e"
        android:textColorHint="#bcbcc2"
        android:layout_below="@+id/signupPage_editText_username"
        android:padding="15dp"
        android:layout_margin="5dp"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signupPage_editText_username"
        android:id="@+id/signupPage_editText_username"
        android:textColor="#8a8a8e"
        android:textColorHint="#bcbcc2"
        android:layout_below="@+id/signupPage_editText_email"
        android:padding="15dp"
        android:layout_margin="5dp"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signupPage_editText_password_c"
        android:inputType="textPassword"
        android:id="@+id/signupPage_editText_password_c"
        android:textColor="#8a8a8e"
        android:textColorHint="#bcbcc2"
        android:layout_below="@+id/signupPage_editText_password"
        android:padding="15dp"
        android:layout_margin="5dp"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupPage_button_signup"
        android:layout_marginTop="80dp"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="#8a8a8e"
        android:textColor="#3A3C46"
        android:id="@+id/signupPage_button_signup"
        android:layout_below="@+id/signupPage_editText_password_c"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
