<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="csc296.projectapplication02.LoginPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginPage_title"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/text"
        android:id="@+id/loginPage_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginPage_editText_email"
        android:inputType="textEmailAddress"
        android:id="@+id/loginPage_editText_email"
        android:layout_below="@id/loginPage_title"
        android:layout_marginTop="30dp"
        android:textColor="@color/text"
        android:padding="15dp"
        android:textColorHint="@color/hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginPage_editText_password"
        android:inputType="textPassword"
        android:id="@+id/loginPage_editText_password"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:layout_centerVertical="true"
        android:padding="15dp"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginPage_button"
        android:layout_marginTop="80dp"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/button_background"
        android:textColor="@color/button_text"
        android:id="@+id/loginPage_button_login"
        android:layout_below="@+id/loginPage_editText_password"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
