<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="csc296.projectapplication02.CreatePostPage">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="10"
        android:gravity="top|start"
        android:maxLines="15"
        android:minLines="9"
        android:scrollbars="vertical"
        android:background="@color/button_background"
        android:id="@+id/create_post_content"
        android:hint="@string/create_post_editText"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_post_take_picture"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/create_post_content"
        android:layout_marginTop="30dp"
        android:id="@+id/create_post_photo_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_post_submit"
        android:layout_below="@id/create_post_photo_button"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/create_post_submit"/>

</RelativeLayout>
